# guessing-game

./: .gitignore  .python-version  .safety-project.ini  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: lib.rs
tests/: test_guessing_game.py
